添加编译库文件时需要的标志与库

--- a/source/scripts/makefile/Makefile
+++ b/source/scripts/makefile/Makefile
@@ -9,27 +9,31 @@ MAKEFLAGS += --no-print-directory
 MAKEFLAGS += --no-builtin-rules
 MAKEFLAGS += --no-builtin-variables
 
-# Project name and Library name
+# Project name and Library name and Compile opts
 # ---------------------------------------------------------------------------
-libname		:= pa8910
-version		:= 0.0.1
-export libname version
+libname   := pa8910
+version   := 0.0.1
+lib-flags :=
+lib-libs  :=
+
+export libname version lib-flags lib-libs
+
 
 # All subdir
 # ---------------------------------------------------------------------------
-lib_dir		:= lib
-tools_dir	:= tools
+lib_dir   := lib
+tools_dir := tools
 
 
 # Define Global Compiler and Compile opts
 # ---------------------------------------------------------------------------
-CC		:= $(CROSS_COMPILE)gcc
-LD		:= $(CROSS_COMPILE)ld
-AR		:= $(CROSS_COMPILE)ar
-CPPFLAGS	+= 
-CFLAGS		+= -fPIC
-LDFLAGS		+= -L $(lib_dir)/
-LIBS		+= -l$(libname)
+CC       := $(CROSS_COMPILE)gcc
+LD       := $(CROSS_COMPILE)ld
+AR       := $(CROSS_COMPILE)ar
+CPPFLAGS +=
+CFLAGS   += -fPIC
+LDFLAGS  += -L $(lib_dir)/
+LIBS     += -l$(libname)
 
 export CC LD AR CPPFLAGS CFLAGS LDFLAGS LIBS 
 
@@ -40,9 +44,9 @@ include scripts/Makefile.lib
 
 # Make target
 # ---------------------------------------------------------------------------
-subdir		:= $(lib_dir) $(tools_dir)
-build_dir	:= $(subdir)
-clean_dir	:= $(addprefix _clean_, $(subdir))
+subdir    := $(lib_dir) $(tools_dir)
+build_dir := $(subdir)
+clean_dir := $(addprefix _clean_, $(subdir))
 
 
 
