添加lib依赖包含, 更新内核笔记

--- a/source/scripts/makefile/scripts/Makefile.clean
+++ b/source/scripts/makefile/scripts/Makefile.clean
@@ -7,7 +7,7 @@ include scripts/Makefile.lib
 
 
 clean-files := $(obj) $(obj-deps) $(single) $(multi) \
-		$(lib) $(curlib) $(arlib) $(shlib)
+		$(lib) $(lib-deps) $(curlib) $(arlib) $(shlib)
 
 
 __clean : $(subdir)
