--- a/source/scripts/makefile/scripts/Makefile.bininst
+++ b/source/scripts/makefile/scripts/Makefile.bininst
@@ -6,8 +6,13 @@ __bininst :
 include scripts/Makefile.lib
 
 
+# Install bin
+# ---------------------------------------------------------------------------
 inst_bindir := $(inst_path)/bin
 inst-bin    := $(single) $(multi)
+
+echo_bininst = INSTALL $@
+cmd_bininst = mkdir -p $(inst_bindir); cp -r $@ $(inst_bindir)
 
 
 __bininst : $(subdir) $(inst-bin)
