--- a/source/scripts/makefile/scripts/Makefile.clean
+++ b/source/scripts/makefile/scripts/Makefile.clean
@@ -6,8 +6,13 @@ __clean :
 include scripts/Makefile.lib
 
 
+# Clean
+# ---------------------------------------------------------------------------
 clean-files := $(obj) $(obj-deps) $(single) $(multi) \
 		$(lib) $(lib-deps) $(curlib) $(arlib) $(shlib)
+
+echo_clean = CLEAN   $(src)
+cmd_clean = rm -rf $(clean-files)
 
 
 __clean : $(subdir)
