--- a/source/scripts/makefile/scripts/Makefile.hdrinst
+++ b/source/scripts/makefile/scripts/Makefile.hdrinst
@@ -6,6 +6,12 @@ __hdrinst :
 include scripts/Makefile.lib
 
 
+# Install header
+# ---------------------------------------------------------------------------
+echo_hdrinst = INSTALL $(hdr_dir)
+cmd_hdrinst = mkdir -p $(inst_path); cp -r $(hdr_dir) $(inst_path)
+
+
 __hdrinst :
 	$(call cmd,hdrinst)
 
