--- a/source/scripts/makefile/scripts/Makefile.libinst
+++ b/source/scripts/makefile/scripts/Makefile.libinst
@@ -6,9 +6,17 @@ __libinst :
 include scripts/Makefile.lib
 
 
+# Install lib
+# ---------------------------------------------------------------------------
 inst-libdir := $(inst_path)/lib
 link-lib    := $(addprefix $(inst-libdir)/, $(notdir $(shlib)))
 shlib-ver   := $(addsuffix .$(version), $(notdir $(shlib)))
+
+echo_libinst = INSTALL $(lib_dir)
+cmd_libinst = mkdir -p $(inst-libdir); \
+	cp -r $(arlib) $(shlib) $(inst-libdir); \
+	mv $(link-lib) $(addprefix $(inst-libdir)/, $(shlib-ver)); \
+	ln -sf $(shlib-ver) $(link-lib)
 
 
 __libinst :
