--- a/source/scripts/makefile/scripts/Makefile.clean
+++ b/source/scripts/makefile/scripts/Makefile.clean
@@ -3,13 +3,13 @@ PHONY := __clean
 __clean :
 
 
-include scripts/Makefile.lib
+include scripts/Makefile.include
 
 
 # Clean
 # ---------------------------------------------------------------------------
-clean_files := $(obj) $(obj-deps) $(single) $(multi) \
-		$(lib) $(lib-deps) $(curlib) $(arlib) $(shlib)
+clean_files := $(obj) $(obj_deps) $(single) $(multi) \
+		$(lib) $(lib_deps) $(curlib) $(arlib) $(shlib)
 
 echo_clean = CLEAN   $(src)
 cmd_clean = rm -rf $(clean_files)
